--- a/index.html
+++ b/index.html
@@ -40,45 +40,45 @@
         </div>
       </div>
 
-      <div class="container-fluid">
-        <div class="row">
-            <form>
-                <p>Filter Search</p>
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
-                    </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                    </li>
-                </ul>
-            </form>
+    <div class="container-fluid">
+    <div class="row">
+        <form>
+            <p> Filter Search </p>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <label for="date">Enter Date</label>
+                    <input type="text" placeholder="1/10/2010" id="datetime" />
+                </li>
+                <li class="list-group-item">
+                    <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                </li>
+            </ul>
+        </form>
 
-        <div class="col-md-3">
+    <div class="col-md-3">
 
-        </div>
+    </div>
 
-        <div class="col-md-9">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>
-                    <th>Date</th>
-                    <th>City</th>
-                    <th>State</th>
-                    <th>Country</th>
-                    <th>Shape</th>
-                    <th>Duration</th>
-                    <th>Comments</th>
-                  </th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-        </div>
-      </div>
+    <div class="col-md-9">
+        <table class="table table-striped">
+            <thead>
+             <tr>
+                <th>Date</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Country</th>
+                <th>Shape</th>
+                <th>Duration</th>
+                <th>Comments</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 
    
 </body>
