--- a/index.html
+++ b/index.html
@@ -49,11 +49,24 @@
                 <p>Filter Search</p>
                  <ul class="bg-dark">
                     <li class="list-group-item bg-dark">
-                        <label for="date">Enter Date</label>
+                        <label for="date">Enter a Date</label>
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <label for="city">Enter a City</label>
+                        <input type="text" placeholder="roswell" id="city" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="state">Enter a State</label>
+                        <input type="text" placeholder="ca" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="country">Enter a Country</label>
+                        <input type="text" placeholder="us" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="shape">Enter a Shape</label>
+                        <input type="text" placeholder="circle" id="shape" />
                     </li>
                  </ul>
            </form>
@@ -78,7 +91,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <script src="static/js/app_1.js"></script>
+    <script src="static/js/app.js"></script>
 
     </div>
 </body>
